--- a/index.html
+++ b/index.html
@@ -6,67 +6,69 @@
 	  <link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<nav id="navigation" class="bordered">
-			<ul>
-				<li><a href="#">View Music</a></li>
-				<li>|</li>
-				<li><a href="#">Add Music</a></li>
-				<li>|</li>
-				<li><a href="#">Profile</a></li>
-			</ul>
-		</nav>
-		<form action="index.html" method="get" id="song-options" class="bordered">
-			<label>Song length:<input type="range" name="song-length" class="displayblock"></label>
-			<label>Artist:<select name="artist" class="displayblock">
-				<!--<option value="options">Options</option>-->
-				<option value="alraune">Alraune</option>
-				<option value="baringTeeth">Baring Teeth</option>
-				<option value="converge">Converge</option>
-				<option value="dendriticArbor">Dendritic Arbor</option>
-				<option value="egyptrixx">Egyptrixx</option>
-			</select></label>
-			<label>Album:<select name="album" class="displayblock">
-				<!-- <option value="options">Options</option> -->
-				<option value="alrauneAlbum">The Process of Self-Immolation</option>
-				<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
-				<option value="convergeAlbum">When Forever Comes Crashing</option>
-				<option value="dendriticArborAlbum">Romantic Love</option>
-				<option value="egyptrixxAlbum">A/B Til Infinity</option>
-			</select></label>
-			<p id="genre-title">Genre:</p>
-			<label><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
-			<label><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
-			<label><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
-			<label><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
-			<label><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
-			<label><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
-			<input type="submit" value="Filter" class="displayblock">
-		</form>
-		<div id="results" class="bordered">
-			<p class="song-name">Exordium</p>
-			<span class="results-artist">Alraune</span>
-			<span class="results-divider">|</span>
-			<span class="results-album">The Process of Self-Immolation</span>
-			<span class="results-divider">|</span>
-			<span class="results-genre">Black Metal</span>
-			<p class="song-name">Conduit</p>
-			<span class="results-artist">Converge</span>
-			<span class="results-divider">|</span>
-			<span class="results-album">When Forever Comes Crashing</span>
-			<span class="results-divider">|</span>
-			<span class="results-genre">Hardcore</span>
-			<p class="song-name">Blooming Amygdala</p>
-			<span class="results-artist">Dendritic Arbor</span>
-			<span class="results-divider">|</span>
-			<span class="results-album">Romantic Love</span>
-			<span class="results-divider">|</span>
-			<span class="results-genre">Grindcore</span>
-			<p class="song-name">Ax//s</p>
-			<span class="results-artist">Egyptrixx</span>
-			<span class="results-divider">|</span>
-			<span class="results-album">A/B Til Infinity</span>
-			<span class="results-divider">|</span>
-			<span class="results-genre">Electronic</span>
-		</div>
+		<div id="container">
+			<nav id="navigation" class="bordered">
+				<ul>
+					<li><a href="#">View Music</a></li>
+					<li>|</li>
+					<li><a href="#">Add Music</a></li>
+					<li>|</li>
+					<li><a href="#">Profile</a></li>
+				</ul>
+			</nav>
+			<form action="index.html" method="get" id="song-options" class="bordered">
+				<label>Song length:<input type="range" name="song-length" class="displayblock"></label>
+				<label>Artist:<select name="artist" class="displayblock">
+					<!--<option value="options">Options</option>-->
+					<option value="alraune">Alraune</option>
+					<option value="baringTeeth">Baring Teeth</option>
+					<option value="converge">Converge</option>
+					<option value="dendriticArbor">Dendritic Arbor</option>
+					<option value="egyptrixx">Egyptrixx</option>
+				</select></label>
+				<label>Album:<select name="album" class="displayblock">
+					<!-- <option value="options">Options</option> -->
+					<option value="alrauneAlbum">The Process of Self-Immolation</option>
+					<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
+					<option value="convergeAlbum">When Forever Comes Crashing</option>
+					<option value="dendriticArborAlbum">Romantic Love</option>
+					<option value="egyptrixxAlbum">A/B Til Infinity</option>
+				</select></label>
+				<p id="genre-title">Genre:</p>
+				<label><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
+				<label><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
+				<label><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
+				<label><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
+				<label><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
+				<label><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
+				<input type="submit" value="Filter" class="displayblock submit">
+			</form>
+			<div id="results" class="bordered">
+				<p class="song-name">Exordium</p>
+				<span class="results-line results-artist">Alraune</span>
+				<span class="results-line results-divider">|</span>
+				<span class="results-line results-album">The Process of Self-Immolation</span>
+				<span class="results-line results-divider">|</span>
+				<span class="results-line results-genre">Black Metal</span>
+				<p class="song-name">Conduit</p>
+				<span class="results-line results-artist">Converge</span>
+				<span class="results-line results-divider">|</span>
+				<span class="results-line results-album">When Forever Comes Crashing</span>
+				<span class="results-line results-divider">|</span>
+				<span class="results-line results-genre">Hardcore</span>
+				<p class="song-name">Blooming Amygdala</p>
+				<span class="results-line results-artist">Dendritic Arbor</span>
+				<span class="results-line results-divider">|</span>
+				<span class="results-line results-album">Romantic Love</span>
+				<span class="results-line results-divider">|</span>
+				<span class="results-line results-genre">Grindcore</span>
+				<p class="song-name">Ax//s</p>
+				<span class="results-line results-artist">Egyptrixx</span>
+				<span class="results-line results-divider">|</span>
+				<span class="results-line results-album">A/B Til Infinity</span>
+				<span class="results-line results-divider">|</span>
+				<span class="results-line results-genre">Electronic</span>
+			</div>
+		</div>	
 	</body>
 </html>
