--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 					<option value="egyptrixxAlbum">A/B Til Infinity</option>
 				</select></label>
 				<p id="genre-title">Genre:</p>
-				<label><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
-				<label><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
-				<label><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
-				<label><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
-				<label><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
-				<label><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
+					<label class="floatleft"><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
+					<label class="floatright"><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
+					<label class="floatleft"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
+					<label class="floatright"><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
+					<label class="floatleft"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
+					<label class="floatright"><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
 				<input type="submit" value="Filter" class="displayblock submit">
 			</form>
 			<div id="results" class="bordered">
