--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 				<input type="submit" value="Filter" class="displayblock submit">
 			</form>
 			<div id="results" class="bordered">
+			<!--
 				<p class="song-name">Exordium</p>
 				<span class="results-line results-artist">Alraune</span>
 				<span class="results-line results-divider">|</span>
@@ -72,7 +73,9 @@
 				<span class="results-line results-album">A/B Til Infinity</span>
 				<span class="results-line results-divider">|</span>
 				<span class="results-line results-genre">Electronic</span>
+				-->
 			</div>
-		</div>	
+		</div>
+		<script src="songs.js"></script>
 	</body>
 </html>
