made a lot of progress

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 				<input type="submit" value="Filter" class="displayblock submit">
 			</form>
 			<div id="results" class="bordered">
+				<p id="first-song-name" class="song-name"></p>
 			<!--
-				<p class="song-name">Exordium</p>
+				<p id ="first-song-name" class="song-name">Exordium</p>
 				<span class="results-line results-artist">Alraune</span>
 				<span class="results-line results-divider">|</span>
 				<span class="results-line results-album">The Process of Self-Immolation</span>
