js writes to dom

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div id="results" class="bordered">
 				<p id="first-song-name" class="song-name"></p>
 			<!--
-				<p id ="first-song-name" class="song-name">Exordium</p>
+				<p class="song-name">Exordium</p>
 				<span class="results-line results-artist">Alraune</span>
 				<span class="results-line results-divider">|</span>
 				<span class="results-line results-album">The Process of Self-Immolation</span>
