--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 					<li><a href="#">Profile</a></li>
 				</ul>
 			</nav>
+			<nav class="hidden bordered">
+				<ul>
+					<li><a href="#">View Music</a></li>
+					<li>|</li>
+					<li><a href="#">Add Music</a></li>
+					<li>|</li>
+					<li><a href="#">Profile</a></li>
+				</ul>
+			</nav>
+
 			<form action="index.html" method="get" id="song-options" class="bordered">
 				<label>Song length:<input type="range" name="song-length" class="displayblock"></label>
 				<label>Artist:<select name="artist" class="displayblock">
