--- a/index.html
+++ b/index.html
@@ -25,67 +25,68 @@
 					<li><a href="#">Profile</a></li>
 				</ul>
 			</nav>
-
-			<form action="index.html" method="get" id="song-options" class="bordered">
-				<label>Song length:<input type="range" name="song-length" class="displayblock"></label>
-				<label>Artist:<select name="artist" class="displayblock">
-					<!--<option value="options">Options</option>-->
-					<option value="alraune">Alraune</option>
-					<option value="baringTeeth">Baring Teeth</option>
-					<option value="converge">Converge</option>
-					<option value="dendriticArbor">Dendritic Arbor</option>
-					<option value="egyptrixx">Egyptrixx</option>
-				</select></label>
-				<label>Album:<select name="album" class="displayblock">
-					<!-- <option value="options">Options</option> -->
-					<option value="alrauneAlbum">The Process of Self-Immolation</option>
-					<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
-					<option value="convergeAlbum">When Forever Comes Crashing</option>
-					<option value="dendriticArborAlbum">Romantic Love</option>
-					<option value="egyptrixxAlbum">A/B Til Infinity</option>
-				</select></label>
-				<p id="genre-title">Genre:</p>
-					<div id="left-genres">
-						<label class="displayblock"><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
-						<label class="displayblock"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
-						<label class="displayblock"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
-					</div>
-					<div id="right-genres">
-						<label class="displayblock"><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
-						<label class="displayblock"><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
-						<label class="displayblock"><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
-					</div>	
-				<input type="submit" value="Filter" class="displayblock submit">
-			</form>
-			<div id="results" class="bordered">
-				<p id="first-song-name" class="song-name"></p>
-			<!--
-				<p class="song-name">Exordium</p>
-				<span class="results-line results-artist">Alraune</span>
-				<span class="results-line results-divider">|</span>
-				<span class="results-line results-album">The Process of Self-Immolation</span>
-				<span class="results-line results-divider">|</span>
-				<span class="results-line results-genre">Black Metal</span>
-				<p class="song-name">Conduit</p>
-				<span class="results-line results-artist">Converge</span>
-				<span class="results-line results-divider">|</span>
-				<span class="results-line results-album">When Forever Comes Crashing</span>
-				<span class="results-line results-divider">|</span>
-				<span class="results-line results-genre">Hardcore</span>
-				<p class="song-name">Blooming Amygdala</p>
-				<span class="results-line results-artist">Dendritic Arbor</span>
-				<span class="results-line results-divider">|</span>
-				<span class="results-line results-album">Romantic Love</span>
-				<span class="results-line results-divider">|</span>
-				<span class="results-line results-genre">Grindcore</span>
-				<p class="song-name">Ax//s</p>
-				<span class="results-line results-artist">Egyptrixx</span>
-				<span class="results-line results-divider">|</span>
-				<span class="results-line results-album">A/B Til Infinity</span>
-				<span class="results-line results-divider">|</span>
-				<span class="results-line results-genre">Electronic</span>
-				-->
-			</div>
+				<div id="song-options-div">
+					<form action="index.html" method="get" id="song-options" class="bordered">
+						<label>Song length:<input type="range" name="song-length" class="displayblock"></label>
+						<label>Artist:<select name="artist" class="displayblock">
+							<!--<option value="options">Options</option>-->
+							<option value="alraune">Alraune</option>
+							<option value="baringTeeth">Baring Teeth</option>
+							<option value="converge">Converge</option>
+							<option value="dendriticArbor">Dendritic Arbor</option>
+							<option value="egyptrixx">Egyptrixx</option>
+						</select></label>
+						<label>Album:<select name="album" class="displayblock">
+							<!-- <option value="options">Options</option> -->
+							<option value="alrauneAlbum">The Process of Self-Immolation</option>
+							<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
+							<option value="convergeAlbum">When Forever Comes Crashing</option>
+							<option value="dendriticArborAlbum">Romantic Love</option>
+							<option value="egyptrixxAlbum">A/B Til Infinity</option>
+						</select></label>
+						<p id="genre-title">Genre:</p>
+							<div id="left-genres">
+								<label class="displayblock"><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
+								<label class="displayblock"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
+								<label class="displayblock"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
+							</div>
+							<div id="right-genres">
+								<label class="displayblock"><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
+								<label class="displayblock"><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
+								<label class="displayblock"><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
+							</div>	
+						<input type="submit" value="Filter" class="displayblock submit">
+					</form>
+				</div>
+				<div id="results" class="bordered">
+					<p id="first-song-name" class="song-name"></p>
+				<!--
+					<p class="song-name">Exordium</p>
+					<span class="results-line results-artist">Alraune</span>
+					<span class="results-line results-divider">|</span>
+					<span class="results-line results-album">The Process of Self-Immolation</span>
+					<span class="results-line results-divider">|</span>
+					<span class="results-line results-genre">Black Metal</span>
+					<p class="song-name">Conduit</p>
+					<span class="results-line results-artist">Converge</span>
+					<span class="results-line results-divider">|</span>
+					<span class="results-line results-album">When Forever Comes Crashing</span>
+					<span class="results-line results-divider">|</span>
+					<span class="results-line results-genre">Hardcore</span>
+					<p class="song-name">Blooming Amygdala</p>
+					<span class="results-line results-artist">Dendritic Arbor</span>
+					<span class="results-line results-divider">|</span>
+					<span class="results-line results-album">Romantic Love</span>
+					<span class="results-line results-divider">|</span>
+					<span class="results-line results-genre">Grindcore</span>
+					<p class="song-name">Ax//s</p>
+					<span class="results-line results-artist">Egyptrixx</span>
+					<span class="results-line results-divider">|</span>
+					<span class="results-line results-album">A/B Til Infinity</span>
+					<span class="results-line results-divider">|</span>
+					<span class="results-line results-genre">Electronic</span>
+					-->
+				</div>
 		</div>
 		<script src="songs.js"></script>
 	</body>
