--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<body>
 			<nav id="navigation" class="bordered">
 				<ul>
-					<li><a href="#">View Music</a></li>
+					<li><a href="#" id="view-music-link">View Music</a></li>
 					<li>|</li>
-					<li><a href="#">Add Music</a></li>
+					<li><a href="#" id="add-music-link">Add Music</a></li>
 					<li>|</li>
-					<li><a href="#">Profile</a></li>
+					<li><a href="#" id="profile-link">Profile</a></li>
 				</ul>
 			</nav>
 			<nav class="hidden bordered">
