--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
 					<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
 					<label class="displayblock">Album:<input name="album-name-input" type="text" id="album-name-input"></label>
-					<button class="displayblock center" name="add">Add</button>
+					<button class="displayblock center" name="add" id="form-add-button">Add</button>
 					<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
 					<label class="displayblock">Artist:<select name="artist" class="displayblock center">
 						<!--<option value="options">Options</option>-->
