added form to own 'page' and put filter with music results

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 				</ul>
 			</nav>
 		<div id="flex-container">
-				<div id="song-options-div" class="bordered form-style display-none">
+			<div id="add-music" class="display-none bordered">
 					<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
 					<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
 					<label class="displayblock">Album:<input name="album-name-input" type="text" id="album-name-input"></label>
 					<button class="displayblock center" name="add" id="form-add-button">Add</button>
+			</div>
+				<div id="song-options-div" class="bordered form-style">
 					<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
 					<label class="displayblock">Artist:<select name="artist" class="displayblock center">
 						<!--<option value="options">Options</option>-->
