--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 					<li><a href="#">Profile</a></li>
 				</ul>
 			</nav>
-		<div id="flex-container">
+		<!-- <div id="flex-container"> -->
 			<div id="add-music" class="display-none bordered">
 					<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
 					<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
 					<label class="displayblock">Album:<input name="album-name-input" type="text" id="album-name-input"></label>
 					<button class="displayblock" name="add" id="form-add-button">Add</button>
+					<div id="error-message" class="display-none"></div>
 			</div>
 				<div id="song-options-div" class="bordered form-style">
 					<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
@@ -91,7 +92,7 @@
 					<span class="results-line results-genre">Electronic</span>
 					-->
 				</div>
-		</div>
+		<!-- </div> -->
 		<script src="songs.js"></script>
 	</body>
 </html>
