--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 					-->
 				</div>
 		<!-- </div> -->
+		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="songs.js"></script>
 	</body>
 </html>
