added more jquery progress

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</ul>
 			</nav>
 		<!-- <div id="flex-container"> -->
-			<div id="add-music" class="bordered">
+			<div id="add-music" class="bordered display-none">
 					<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
 					<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
 					<label class="displayblock">Album:<input name="album-name-input" type="text" id="album-name-input"></label>
