initial bower, bootstrap, grunt, etc commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	  <meta charset="utf-8">
 	  <title>Music History pt. 5</title>
-	  <link rel="stylesheet" type="text/css" href="style.css">
+	  <link rel="stylesheet" type="text/css" href="./styles/style.css">
 	</head>
 	<body>
 			<nav id="navigation" class="bordered">
@@ -93,7 +93,8 @@
 					-->
 				</div>
 		<!-- </div> -->
-		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="songs.js"></script>
+		<script src="./lib/bower_components/jquery/dist/jquery.min.js"></script>
+		<!-- <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> -->
+		<script src="./javascripts/songs.js"></script>
 	</body>
 </html>
