--- a/index.html
+++ b/index.html
@@ -2,99 +2,121 @@
 <html lang ="en">
 	<head>
 	  <meta charset="utf-8">
-	  <title>Music History pt. 5</title>
+	  <title>Music History pt. 6</title>
+	  <link rel="stylesheet" type="text/css" href="./lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	  <link rel="stylesheet" type="text/css" href="./styles/style.css">
 	</head>
 	<body>
-			<nav id="navigation" class="bordered">
-				<ul>
-					<li><a href="#" id="view-music-link">View Music</a></li>
-					<li>|</li>
-					<li><a href="#" id="add-music-link">Add Music</a></li>
-					<li>|</li>
-					<li><a href="#" id="profile-link">Profile</a></li>
-				</ul>
-			</nav>
-			<nav class="hidden bordered">
-				<ul>
-					<li><a href="#">View Music</a></li>
-					<li>|</li>
-					<li><a href="#">Add Music</a></li>
-					<li>|</li>
-					<li><a href="#">Profile</a></li>
-				</ul>
-			</nav>
+		<div class="container-fluid">
+			<div class="row">
+				<!-- <div class="col-md-12"> -->
+					<nav id="navigation" class="bordered">
+						<ul>
+							<li><a href="#" id="view-music-link">View Music</a></li>
+							<li>|</li>
+							<li><a href="#" id="add-music-link">Add Music</a></li>
+							<li>|</li>
+							<li><a href="#" id="profile-link">Profile</a></li>
+						</ul>
+					</nav>
+				<!-- </div> -->
+			</div>	
+			<!-- <div class="row">
+				<div class="col-md-12">	
+					<nav class="hidden bordered">
+						<ul>
+							<li><a href="#">View Music</a></li>
+							<li>|</li>
+							<li><a href="#">Add Music</a></li>
+							<li>|</li>
+							<li><a href="#">Profile</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>	 -->
 		<!-- <div id="flex-container"> -->
-			<div id="add-music" class="bordered display-none">
-					<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
-					<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
-					<label class="displayblock">Album:<input name="album-name-input" type="text" id="album-name-input"></label>
-					<button class="displayblock" name="add" id="form-add-button">Add</button>
-					<div id="error-message" class="display-none"></div>
-			</div>
-				<div id="song-options-div" class="bordered form-style">
-					<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
-					<label class="displayblock">Artist:<select name="artist" class="displayblock center">
-						<!--<option value="options">Options</option>-->
-						<option value="alraune">Alraune</option>
-						<option value="baringTeeth">Baring Teeth</option>
-						<option value="converge">Converge</option>
-						<option value="dendriticArbor">Dendritic Arbor</option>
-						<option value="egyptrixx">Egyptrixx</option>
-					</select></label>
-					<label class="displayblock">Album:<select name="album" class="displayblock center">
-						<!-- <option value="options">Options</option> -->
-						<option value="alrauneAlbum">The Process of Self-Immolation</option>
-						<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
-						<option value="convergeAlbum">When Forever Comes Crashing</option>
-						<option value="dendriticArborAlbum">Romantic Love</option>
-						<option value="egyptrixxAlbum">A/B Til Infinity</option>
-					</select></label>
-					<p id="genre-title">Genre:</p>
-						<!-- <div id="left-genres"> -->
-							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
-							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
-							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
-						<!-- </div> -->
-						<!-- <div id="right-genres"> -->
-							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
-							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
-							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
-						<!-- </div>	 -->
-					<button class="displayblock center">Filter</button>
-				</div>
-				<div id="results" class="bordered">
-					<!--<p id="first-song-name" class="song-name"></p> -->
-				<!--
-					<p class="song-name">Exordium</p>
-					<span class="results-line results-artist">Alraune</span>
-					<span class="results-line results-divider">|</span>
-					<span class="results-line results-album">The Process of Self-Immolation</span>
-					<span class="results-line results-divider">|</span>
-					<span class="results-line results-genre">Black Metal</span>
-					<p class="song-name">Conduit</p>
-					<span class="results-line results-artist">Converge</span>
-					<span class="results-line results-divider">|</span>
-					<span class="results-line results-album">When Forever Comes Crashing</span>
-					<span class="results-line results-divider">|</span>
-					<span class="results-line results-genre">Hardcore</span>
-					<p class="song-name">Blooming Amygdala</p>
-					<span class="results-line results-artist">Dendritic Arbor</span>
-					<span class="results-line results-divider">|</span>
-					<span class="results-line results-album">Romantic Love</span>
-					<span class="results-line results-divider">|</span>
-					<span class="results-line results-genre">Grindcore</span>
-					<p class="song-name">Ax//s</p>
-					<span class="results-line results-artist">Egyptrixx</span>
-					<span class="results-line results-divider">|</span>
-					<span class="results-line results-album">A/B Til Infinity</span>
-					<span class="results-line results-divider">|</span>
-					<span class="results-line results-genre">Electronic</span>
-					-->
-				</div>
-		<!-- </div> -->
+				<div class="row" id="add-music">
+					<div class="col-md-3"></div>
+							<!-- <div id="add-music" class="bordered display-none"> -->
+					<div class="col-md-6">
+						<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
+						<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
+						<label class="displayblock">Album:<input name="album-name-input" type="text" id="album-name-input"></label>
+						<button class="displayblock" name="add" id="form-add-button">Add</button>
+						<div id="error-message" class="display-none"></div>
+					</div>
+							<!-- </div> -->
+					<div class="col-md-3"></div>
+				</div>	
+<!-- 			</div> -->
+				<div class="row">
+					<!-- <div class="col-md-1"></div> -->
+					<div id="song-options-div" class="bordered form-style col-sm-4">
+						<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
+						<label class="displayblock">Artist:<select name="artist" class="displayblock center">
+							<!--<option value="options">Options</option>-->
+							<option value="alraune">Alraune</option>
+							<option value="baringTeeth">Baring Teeth</option>
+							<option value="converge">Converge</option>
+							<option value="dendriticArbor">Dendritic Arbor</option>
+							<option value="egyptrixx">Egyptrixx</option>
+						</select></label>
+						<label class="displayblock">Album:<select name="album" class="displayblock center">
+							<!-- <option value="options">Options</option> -->
+							<option value="alrauneAlbum">The Process of Self-Immolation</option>
+							<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
+							<option value="convergeAlbum">When Forever Comes Crashing</option>
+							<option value="dendriticArborAlbum">Romantic Love</option>
+							<option value="egyptrixxAlbum">A/B Til Infinity</option>
+						</select></label>
+						<p id="genre-title">Genre:</p>
+							<!-- <div id="left-genres"> -->
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
+							<!-- </div> -->
+							<!-- <div id="right-genres"> -->
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
+							<!-- </div>	 -->
+						<button class="displayblock center">Filter</button>
+					</div>
+					<div class="col-sm-1"></div>
+					<div id="results" class="bordered col-sm-7">
+					</div>
+					<!-- <div class="col-md-1"></div> -->
+		</div>
 		<script src="./lib/bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="./lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<!-- <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> -->
 		<script src="./javascripts/songs.js"></script>
 	</body>
 </html>
+						<!--<p id="first-song-name" class="song-name"></p> -->
+					<!--
+						<p class="song-name">Exordium</p>
+						<span class="results-line results-artist">Alraune</span>
+						<span class="results-line results-divider">|</span>
+						<span class="results-line results-album">The Process of Self-Immolation</span>
+						<span class="results-line results-divider">|</span>
+						<span class="results-line results-genre">Black Metal</span>
+						<p class="song-name">Conduit</p>
+						<span class="results-line results-artist">Converge</span>
+						<span class="results-line results-divider">|</span>
+						<span class="results-line results-album">When Forever Comes Crashing</span>
+						<span class="results-line results-divider">|</span>
+						<span class="results-line results-genre">Hardcore</span>
+						<p class="song-name">Blooming Amygdala</p>
+						<span class="results-line results-artist">Dendritic Arbor</span>
+						<span class="results-line results-divider">|</span>
+						<span class="results-line results-album">Romantic Love</span>
+						<span class="results-line results-divider">|</span>
+						<span class="results-line results-genre">Grindcore</span>
+						<p class="song-name">Ax//s</p>
+						<span class="results-line results-artist">Egyptrixx</span>
+						<span class="results-line results-divider">|</span>
+						<span class="results-line results-album">A/B Til Infinity</span>
+						<span class="results-line results-divider">|</span>
+						<span class="results-line results-genre">Electronic</span>
+						-->
