--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 					<div class="col-md-3"></div>
 							<!-- <div id="add-music" class="bordered display-none"> -->
 					<div class="col-md-6">
-						<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
-						<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
-						<label class="displayblock">Album:<input name="album-name-input" type="text" id="album-name-input"></label>
+						<label class="displayblock"><span class="displayblock spaced">Song</span><input name="song-name-input" type="text" id="song-name-input"></label>
+						<label class="displayblock"><span class="displayblock spaced">Artist</span><input name="artist-name-input" type="text" id="artist-name-input"></label>
+						<label class="displayblock"><span class="displayblock spaced">Album</span><input name="album-name-input" type="text" id="album-name-input"></label>
 						<button class="displayblock" name="add" id="form-add-button">Add</button>
 						<div id="error-message" class="display-none"></div>
 					</div>
