--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	  <meta charset="utf-8">
 	  <title>Music History pt. 6</title>
 	  <link rel="stylesheet" type="text/css" href="./lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
-	  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+	  <!-- <link rel="stylesheet" type="text/css" href="./styles/style.css"> -->
+	  <link rel="stylesheet" type="text/css" href="./styles/main.css">
 	</head>
 	<body>
 		<div class="container-fluid">
