adjusted bootstrap columns on main view

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				</div>	
 <!-- 			</div> -->
 				<div class="row">
-					<!-- <div class="col-md-1"></div> -->
-					<div id="song-options-div" class="bordered form-style col-sm-4">
+					<div class="col-sm-2"></div>
+					<div id="song-options-div" class="bordered form-style col-sm-2">
 						<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
 						<label class="displayblock">Artist:<select name="artist" class="displayblock center">
 							<!--<option value="options">Options</option>-->
@@ -83,10 +83,11 @@
 							<!-- </div>	 -->
 						<button class="displayblock center">Filter</button>
 					</div>
-					<div class="col-sm-1"></div>
-					<div id="results" class="bordered col-sm-7">
+					<!-- <div class="col-sm-1"></div> -->
+					<div id="results" class="bordered col-sm-6">
+					<!-- results will populate here-->
 					</div>
-					<!-- <div class="col-md-1"></div> -->
+					<div class="col-sm-2"></div>
 		</div>
 		<script src="./lib/bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="./lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
