--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 	  <meta charset="utf-8">
 	  <title>Music History pt. 6</title>
 	  <link rel="stylesheet" type="text/css" href="./lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
-	  <!-- <link rel="stylesheet" type="text/css" href="./styles/style.css"> -->
 	  <link rel="stylesheet" type="text/css" href="./styles/main.css">
 	</head>
 	<body>
 		<div class="container-fluid">
 			<div class="row">
-				<!-- <div class="col-md-12"> -->
 					<nav id="navigation" class="bordered">
 						<ul>
 							<li><a href="#" id="view-music-link">View Music</a></li>
@@ -20,7 +18,6 @@
 							<li><a href="#" id="profile-link">Profile</a></li>
 						</ul>
 					</nav>
-				<!-- </div> -->
 			</div>	
 			<!-- <div class="row">
 				<div class="col-md-12">	
@@ -37,19 +34,16 @@
 			</div>	 -->
 		<!-- <div id="flex-container"> -->
 				<div class="row" id="add-music">
-					<div class="col-md-4 has-bg-color"></div>
-							<!-- <div id="add-music" class="bordered display-none"> -->
-					<div class="col-md-4 add-music-input">
-						<label class="displayblock"><span class="displayblock spaced">Song</span><input name="song-name-input" type="text" id="song-name-input"></label>
-						<label class="displayblock"><span class="displayblock spaced">Artist</span><input name="artist-name-input" type="text" id="artist-name-input"></label>
-						<label class="displayblock"><span class="displayblock spaced">Album</span><input name="album-name-input" type="text" id="album-name-input"></label>
+					<div class="col-sm-4 has-bg-color"></div>
+					<div class="col-sm-4 add-music-input">
+						<label class="displayblock"><span class="displayblock add-music-label">Song</span><input name="song-name-input" type="text" id="song-name-input"></label>
+						<label class="displayblock"><span class="displayblock add-music-label">Artist</span><input name="artist-name-input" type="text" id="artist-name-input"></label>
+						<label class="displayblock"><span class="displayblock add-music-label">Album</span><input name="album-name-input" type="text" id="album-name-input"></label>
 						<button class="displayblock" name="add" id="form-add-button">Add</button>
 						<div id="error-message" class="display-none"></div>
 					</div>
-							<!-- </div> -->
-					<div class="col-md-4 has-bg-color"></div>
-				</div>	
-<!-- 			</div> -->
+					<div class="col-sm-4 has-bg-color"></div>
+				</div>
 				<div class="row">
 					<div class="col-sm-1"></div>
 					<div id="song-options-div" class="bordered form-style col-sm-3">
