overrode bootstrap styling of labels

--- a/index.html
+++ b/index.html
@@ -65,16 +65,12 @@
 							<option value="egyptrixxAlbum">A/B Til Infinity</option>
 						</select></label>
 						<p id="genre-title">Genre:</p>
-							<!-- <div id="left-genres"> -->
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
-								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
-								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
-							<!-- </div> -->
-							<!-- <div id="right-genres"> -->
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
-								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
-							<!-- </div>	 -->
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
+								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreNoiseRock">Noise Rock</label>
 						<button class="displayblock center">Filter</button>
 					</div>
 					<div class="col-sm-1"></div>
