resolved issue with add form showing up for a split second on page load

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</div>
 			</div>	 -->
 		<!-- <div id="flex-container"> -->
-				<div class="row" id="add-music">
+				<div class="row display-none" id="add-music">
 					<div class="col-sm-4 has-bg-color"></div>
 					<div class="col-sm-4 add-music-input">
 						<label class="displayblock"><span class="displayblock add-music-label">Song</span><input name="song-name-input" type="text" id="song-name-input"></label>
