--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-1"></div>
-					<div id="song-options-div" class="bordered form-style col-sm-4">
+					<div id="song-options-div" class="bordered form-style col-sm-3">
 						<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
 						<label class="displayblock">Artist:<select name="artist" class="displayblock center">
 							<!--<option value="options">Options</option>-->
@@ -71,10 +71,10 @@
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreNoiseRock">Noise Rock</label>
-						<button class="displayblock center">Filter</button>
+						<button class="center filter">Filter</button>
 					</div>
 					<!-- <div class="col-sm-1"></div> -->
-					<div id="results" class="bordered col-sm-6">
+					<div id="results" class="bordered col-sm-7">
 <!-- results will populate here-->
 					</div>
 					<div class="col-sm-1"></div>
