fixed margin on last label

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
-								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreNoiseRock">Noise Rock</label>
+								<label class="larger-margin"><input type="checkbox" name="genre" value="genreNoiseRock">Noise Rock</label>
 						<button class="center filter">Filter</button>
 					</div>
 					<!-- <div class="col-sm-1"></div> -->
