starting to add album and artist dropdowns

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang ="en">
 	<head>
 	  <meta charset="utf-8">
-	  <title>Music History pt. 6</title>
+	  <title>Music History (Handlebar pt. 2)</title>
 	  <link rel="stylesheet" type="text/css" href="./lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	  <link rel="stylesheet" type="text/css" href="./styles/main.css">
 	</head>
@@ -47,9 +47,11 @@
 				<div class="row">
 					<div class="col-sm-1"></div>
 					<div id="song-options-div" class="bordered form-style col-sm-3">
+						<ul id="artists"></ul>
+						<ul id="albums"></ul>
+					<!--
 						<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
 						<label class="displayblock">Artist:<select name="artist" class="displayblock center">
-							<!--<option value="options">Options</option>-->
 							<option value="alraune">Alraune</option>
 							<option value="baringTeeth">Baring Teeth</option>
 							<option value="converge">Converge</option>
@@ -57,7 +59,6 @@
 							<option value="egyptrixx">Egyptrixx</option>
 						</select></label>
 						<label class="displayblock">Album:<select name="album" class="displayblock center">
-							<!-- <option value="options">Options</option> -->
 							<option value="alrauneAlbum">The Process of Self-Immolation</option>
 							<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
 							<option value="convergeAlbum">When Forever Comes Crashing</option>
@@ -72,6 +73,7 @@
 								<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
 								<label class="larger-margin"><input type="checkbox" name="genre" value="genreNoiseRock">Noise Rock</label>
 						<button class="center filter">Filter</button>
+						-->
 					</div>
 					<!-- <div class="col-sm-1"></div> -->
 					<div id="results" class="bordered col-sm-7">
