firebase works, add songs works, i think it all works

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 						  
 						  </ul>
 						</div>
+						<button id="clearfilter" class="btn btn-default" type="button">Clear Filter</button>
 					<!--
 						<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
 						<label class="displayblock">Artist:<select name="artist" class="displayblock center">
