--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						    <span class="caret"></span>
 						  </button>
 							<ul id="artists" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-						  
+<!-- list items populate here -->
 						  </ul>
 						</div>
 						<div class="dropdown">
@@ -49,7 +49,7 @@
 						    <span class="caret"></span>
 						  </button>
 							<ul id="albums" class="dropdown-menu" aria-labelledby="dropdownMenu1">
-						  
+<!-- list items populate here -->					  
 						  </ul>
 						</div>
 						<button id="clearfilter" class="btn btn-default" type="button">Clear Filter</button>
