--- a/index.html
+++ b/index.html
@@ -59,14 +59,25 @@
 					</div>
 					<div class="col-sm-1"></div>
 		</div>
-		<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal" id="add-success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 		  <div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        <h5 class="modal-title" id="myModalLabel">Your song was successfully added!</h5>
-		    </div>
-		  </div>
+			    </div>
+			  </div>
+			</div>
+		</div>
+		<div class="modal" id="add-failure" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h5 class="modal-title" id="myModalLabel">Sorry, there was an error and your song was not added.</h5>
+			    </div>
+			  </div>
+			</div>
 		</div>
 
 		<script data-main="javascripts/entry" src="lib/bower_components/requirejs/require.js"></script>
