changed id on dropdowns

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
 					<div id="song-options-div" class="bordered form-style col-sm-3">
 
 						<div class="dropdown">
-						  <button class="btn btn-default dropdown-toggle a-dropdown" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						  <button class="btn btn-default dropdown-toggle a-dropdown" type="button" id="artist-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 						    Artists
 						    <span class="caret"></span>
 						  </button>
-							<ul id="artists" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+							<ul id="artists" class="dropdown-menu" aria-labelledby="artist-dropdown">
 <!-- list items populate here -->
 						  </ul>
 						</div>
 						<div class="dropdown">
-						  <button class="btn btn-default dropdown-toggle a-dropdown" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						  <button class="btn btn-default dropdown-toggle a-dropdown" type="button" id="album-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 						    Albums
 						    <span class="caret"></span>
 						  </button>
-							<ul id="albums" class="dropdown-menu" aria-labelledby="dropdownMenu1">
+							<ul id="albums" class="dropdown-menu" aria-labelledby="album-dropdown">
 <!-- list items populate here -->					  
 						  </ul>
 						</div>
