--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<section ng-controller="SongsLogic">
 				<div id="results" class="bordered">
 					<div class='song-result' ng-repeat="song in songs"><p class='song-name'>{{song.title}}</p><span class='results-line results-artist'>{{song.artist}}</span><span class='results-line results-divider'>|</span><span class='results-line results-album'>{{song.album}}</span><button class='delete'>Delete</button></div>
+				<button class='more'>More</button>
 				</div>
 			</section>
 				
